<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="0dp"
        android:weightSum="2">

        <Button
            android:id="@+id/quotesButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/remove_tile_space_margin"
            android:background="@color/shade1"
            android:text="@string/quotes_button_text"
            android:textColor="@color/dirty_white"
            android:textSize="18sp"
            android:drawableTop="@drawable/quotes"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/readingHistoryButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/remove_tile_space_margin"
            android:background="@color/shade2"
            android:text="@string/reading_history_button_text"
            android:textColor="@color/dirty_white"
            android:textSize="18sp"
            android:drawableTop="@drawable/history"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="0dp"
        android:weightSum="2">

        <Button
            android:id="@+id/readingDiaryButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/remove_tile_space_margin"
            android:background="@color/shade3"
            android:text="@string/reading_diary_button_text"
            android:textColor="@color/dirty_white"
            android:textSize="18sp"
            android:drawableTop="@drawable/currently"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/shade4"
            android:layout_margin="@dimen/remove_tile_space_margin"
            android:text="@string/facebook_button_text"
            android:textColor="@color/dirty_white"
            android:textSize="18sp"
            android:drawableTop="@drawable/facebook"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="0dp"
        android:weightSum="2">

        <Button
            android:id="@+id/locationButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/shade5"
            android:layout_margin="@dimen/remove_tile_space_margin"
            android:text="@string/location_button_text"
            android:textColor="@color/dirty_white"
            android:textSize="18sp"
            android:drawableTop="@drawable/location"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/infoButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/remove_tile_space_margin"
            android:background="@color/shade6"
            android:text="@string/info_button_text"
            android:textColor="@color/dirty_white"
            android:textSize="18sp"
            android:drawableTop="@drawable/info"
            android:paddingTop="35dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>
</LinearLayout>